fix: Исправлены выборки, добавлен метод удаления пользователей
